--- a/css/style.css
+++ b/css/style.css
@@ -214,17 +214,54 @@
 @media (min-width: 767px) {
   	.wrapper {
 		margin-right: 10px;
-		margin-left: 315px;
-		padding: 10px;
+		margin-left: 300px;
+		padding: 0px;
 	  }
 	
 	#logo {
 	width: 50%;
 	padding: 5vh 0px;
-}
+	}
 	
 	#logocompact {
 		display: none;
 	}
+
+	* { box-sizing: border-box; }
+
+	/* ---- grid ---- */
 	
+	.grid {
+	  background: #EEE;
+	  max-width: 1200px;
+	}
+	
+	/* clearfix */
+	.grid:after {
+	  content: '';
+	  display: block;
+	  clear: both;
+	}
+	
+	/* ---- grid-item ---- */
+	
+	.grid-item {
+	  width: 160px;
+	  height: 120px;
+	  float: left;
+	  background: #D26;
+	  border: 2px solid #333;
+	  border-color: hsla(0, 0%, 0%, 0.5);
+	  border-radius: 5px;
+	}
+	
+	.grid-item--width2 { width: 320px; }
+	.grid-item--width3 { width: 480px; }
+	.grid-item--width4 { width: 640px; }
+	
+	.grid-item--height2 { height: 200px; }
+	.grid-item--height3 { height: 260px; }
+	.grid-item--height4 { height: 360px; }
+
+
 }
